--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Sample App</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Inconsolata" />
   </head>
   <body>
     <div id='root'>
