WD-53 Added tests for `Sidebar`, render locales dynamically in `Sidebar`

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -148,3 +148,11 @@ $itemBgColorActive: #16171B;
 
   background: $sidebarColorLight;
 }
+
+.locales {
+  list-style: none;
+}
+
+.locales li {
+  display: inline;
+}
