WD-88 Created a new layout using react-bootstrap - still need to fix, add tests and clean up

--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -156,3 +156,20 @@ $itemBgColorActive: #16171B;
 .locales li {
   display: inline;
 }
+
+/*
+ **********************
+ LayoutBootstrap
+ **********************
+ */
+
+.headerBoot {
+  height: 200px;
+  background: blue;
+}
+
+.contentBoot {
+  margin-top: 100px;
+  background: green;
+}
+
