--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -169,6 +169,24 @@ $itemBgColorActive: #16171B;
  **********************
  */
 
+@media screen and (min-width: 768px) {
+  .contentBoot {
+    width: 750px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .contentBoot {
+    width: 970px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contentBoot {
+    width: 1170px;
+  }
+}
+
 .contentBoot {
   top: $navBarHeight;
   bottom: 0px;
@@ -176,6 +194,10 @@ $itemBgColorActive: #16171B;
   right: 0px;
   position: absolute;
   overflow-y: auto;
+
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px 0px 0px 15px;
 
   background: #eeeeee;
 
