WD-92 configured auth only when env variable is enabled, removed socketIO module, changed app title

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Sample App</title>
+    <title>Harsh Verma</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Inconsolata" />
   </head>
