--- a/src/app/stylesheets/layout.scss
+++ b/src/app/stylesheets/layout.scss
@@ -194,6 +194,7 @@ $itemBgColorActive: #16171B;
   right: 0px;
   position: absolute;
   overflow-y: auto;
+  overflow-x: hidden;
 
   margin-left: auto;
   margin-right: auto;
