added pdf download button, added styling for the download buttons

--- a/src/app/Resume/stylesheets/Resume.scss
+++ b/src/app/Resume/stylesheets/Resume.scss
@@ -3,6 +3,11 @@
   color: #777;
 }
 
+.download-option {
+  display: inline-block;
+  padding-right: 10px;
+}
+
 .resume-section {
   margin-bottom: 20px;
 }
