- added resume btn on home page - removed resume route - changed italian to french

--- a/src/app/Home/stylesheets/Home.scss
+++ b/src/app/Home/stylesheets/Home.scss
@@ -1,13 +1,17 @@
 $introTextColor: #5f5555;
 
 .image-profile-pic {
-  height: 200px;
+  height: 240px;
   border-radius: 50%;
 
   &.align-center {
     display: block;
     margin: auto;
   }
+}
+
+.row-top {
+  padding-top: 50px;
 }
 
 .row-custom {
@@ -26,6 +30,7 @@ $introTextColor: #5f5555;
 
 .intro-heading {
   padding: 20px 0px 5px;
+  line-height: 30px;
 }
 
 .row-social {
