--- a/src/app/template.ejs
+++ b/src/app/template.ejs
@@ -4,6 +4,8 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
+
     <title><%= htmlWebpackPlugin.options.title || 'Webpack App'%></title>
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Inconsolata" />
