--- a/src/app/components/ProjectOverview/ProjectOverview.scss
+++ b/src/app/components/ProjectOverview/ProjectOverview.scss
@@ -1,29 +1,72 @@
-.project-container {
-  width: 100%;
-  background-color: #ffffff;
-  padding: 10px;
-  margin-bottom: 15px;
+// >= 768px
+$imageDimDesktop: 200px;
+
+
+@media screen and (max-width: 767px) {
+  .project-container {
+    width: 100%;
+    background-color: #ffffff;
+    padding: 10px;
+    margin-bottom: 15px;
+  }
+
+  .project-header {
+    width: 300px;
+    display: block;
+    margin: auto;
+    padding: 10px 0px 10px 0px;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .project-image {
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    display: block;
+  }
+
+  .project-description {
+    width: 300px;
+    margin: auto;
+    display: block;
+    padding: 10px 0px 10px 0px;
+  }
 }
 
-.project-header {
-  width: 300px;
-  display: block;
-  margin: auto;
-  padding: 10px 0px 10px 0px;
-  font-size: 20px;
-  font-weight: 500;
-}
+@media screen and (min-width: 768px) {
+  .project-container {
+    width: 100%;
+    background-color: #f9f9f9;
+    margin-bottom: 15px;
+    padding-bottom: 25px;
+  }
 
-.project-image {
-  width: 300px;
-  height: 300px;
-  margin: auto;
-  display: block;
-}
+  .project-header {
+    width: 100%;
+    padding: 15px;
+    font-size: 18px;
+  }
 
-.project-description {
-  width: 300px;
-  margin: auto;
-  display: block;
-  padding: 10px 0px 10px 0px;
+  .project-content {
+    width: 100%;
+    padding-left: 15px;
+    height: $imageDimDesktop;
+  }
+
+  .project-image-container {
+    width: 250px;
+    float: left;
+  }
+
+  .project-image {
+    width: $imageDimDesktop;
+    height: $imageDimDesktop;
+  }
+
+  .project-description {
+    width: 350px;
+    height: $imageDimDesktop;
+    float: left;
+  }
 }
