--- a/src/app/components/ProjectOverview/ProjectOverview.scss
+++ b/src/app/components/ProjectOverview/ProjectOverview.scss
@@ -1,8 +1,8 @@
-// >= 768px
+$imageDimMobile: 300px;
 $imageDimDesktop: 200px;
 
-
-@media screen and (max-width: 767px) {
+// mobile
+@media screen and (max-width: 649px) {
   .project-container {
     width: 100%;
     background-color: #ffffff;
@@ -11,7 +11,7 @@ $imageDimDesktop: 200px;
   }
 
   .project-header {
-    width: 300px;
+    width: $imageDimMobile;
     display: block;
     margin: auto;
     padding: 10px 0px 10px 0px;
@@ -20,21 +20,22 @@ $imageDimDesktop: 200px;
   }
 
   .project-image {
-    width: 300px;
-    height: 300px;
+    width: $imageDimMobile;
+    height: $imageDimMobile;
     margin: auto;
     display: block;
   }
 
   .project-description {
-    width: 300px;
+    width: $imageDimMobile;
     margin: auto;
     display: block;
     padding: 10px 0px 10px 0px;
   }
 }
 
-@media screen and (min-width: 768px) {
+// desktop
+@media screen and (min-width: 650px) {
   .project-container {
     width: 100%;
     background-color: #f9f9f9;
